@@ -1,14 +1,24 @@
+2006-12-13  KUBO Takehiro  <kubo@jiubao.org>
+	* ext/oci8/bind.c, ext/oci8/lob.c, ext/oci8/oci8.h, ext/oci8/stmt.c:
+	    delete oci8_bind_handle_t and use oci8_hp_obj_t.
+	    (prepare to bind an array)
+	* ext/oci8/bind.c: fix for alignment.
+	    (prepare to bind an array)
+
 2006-12-12  KUBO Takehiro  <kubo@jiubao.org>
 	* ext/oci8/bind.c, ext/oci8/lob.c, ext/oci8/oci8.h,
 	  ext/oci8/ocidatetime.c, ext/oci8/ocinumber.c, ext/oci8/oradate.c,
 	  ext/oci8/rowid.c, ext/oci8/stmt.c, ext/oci8/tdo.c, lib/oci8/oci8.rb:
 	    change arguments of internal bind-init functions.
+	    (refactoring)
 	* ext/oci8/bind.c, ext/oci8/lob.c, ext/oci8/oci8.h,
 	  ext/oci8/ocidatetime.c, ext/oci8/ocinumber.c, ext/oci8/oradate.c,
 	  ext/oci8/rowid.c, ext/oci8/stmt.c, ext/oci8/tdo.c:
 	    split bind-init callback to init and init_elem.
+	    (prepare to bind an array)
 	* ext/oci8/bind.c, ext/oci8/oci8.h, ext/oci8/stmt.c:
 	    change arguments of piece-width-fetch callbacks.
+	    (prepare to bind an array)
 
 2006-12-07  KUBO Takehiro  <kubo@jiubao.org>
 	* ext/oci8/bind.c, ext/oci8/oci8.h, ext/oci8/stmt.c, ext/oci8/tdo.c:
